# PyS3Uploader

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pre_commit.sh  pyproject.toml  release_notes.md  requirements.txt
.github/workflows/: notes.yml  python-publish.yml  release.yml
docs/: README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: README.md.txt  index.rst.txt
docs_gen/: conf.py  index.rst  static.css
docs_gen/_build/doctrees/: README.doctree  environment.pickle  index.doctree
docs_gen/_build/html/: .buildinfo
pys3uploader/: __init__.py  logger.py  metadata.py  progress.py  timer.py  tree.py  uploader.py  utils.py
s3/: __init__.py  exceptions.py  logger.py  uploader.py  utils.py
