[project]
name = "PyS3Uploader"
dynamic = ["version"]
description = "Python module to upload objects to an S3 bucket."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Vignesh Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: File Transfer Protocol (FTP)"
]
dependencies = [
    "boto3==1.40.*",
    "tqdm==4.67.*"
]
keywords = ["s3"]
requires-python = ">=3.11"

[tool.setuptools]
packages = ["s3"]

[build-system]
requires = ["setuptools<77", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "s3.version" }

[project.optional-dependencies]
dev = ["sphinx==5.1.1", "pre-commit", "recommonmark"]

[project.urls]
Homepage = "https://github.com/thevickypedia/PyS3Uploader"
Docs = "https://thevickypedia.github.io/PyS3Uploader/"
Source = "https://github.com/thevickypedia/PyS3Uploader"
"Bug Tracker" = "https://github.com/thevickypedia/PyS3Uploader/issues"
